syntax = "proto3";

package threat_protection.message.malicious_event.dashboard.v1;

import "threat_protection/message/malicious_event/event_type/v1/event_type.proto";

option java_outer_classname = "MaliciousEventDashboardProto";
option java_package = "threat_protection.message.malicious_event.dashboard.v1";

message DashboardMaliciousEventMessage {
  string id = 1;
  string actor = 2;
  string filter_id = 3;
  int64 detected_at = 4;
  string ip = 5;
  string endpoint = 6;
  string method = 7;
  int32 api_collection_id = 8;
  string payload = 9;
  string country = 10;
  threat_protection.message.malicious_event.event_type.v1.EventType event_type = 11;
}
